--- a/style.css
+++ b/style.css
@@ -172,3 +172,51 @@ section{
 #mute:active{
     scale:0.95;
 }
+
+
+
+
+
+
+@media (max-width: 480px) {
+    section {
+        width: 100%;
+    }
+
+    .reel .bottom {
+        padding: 20px 15px;
+    }
+
+    .bottom > h3 {
+        font-size: 16px;
+    }
+
+    .right {
+        padding: 20px;
+        width: 35px;
+        bottom: 10px;
+    }
+
+    .right i {
+        font-size: 22px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    section {
+        width: 80%;
+    }
+
+    .right {
+        width: 40px;
+    }
+}
+
+
+@media (min-width: 1024px) {
+    section {
+        width: 400px;
+    }
+}
+
